# tnewt_rs

./: .gitignore  Cargo.toml  README.md  out.txt  stockfish.txt
benches/: board_bench.rs  move_gen.rs
src/: board.rs  main.rs
src/board/: magic_numbers.rs  mod.rs
tests/: board.rs  board_test.rs
tnewt_board/: Cargo.toml  docs.md
tnewt_board/src/: board.rs  castling.rs  color.rs  coordinate.rs  hash_set_lib.rs  implementations.rs  lib.rs  magic_numbers.rs  mov.rs  original_lib.rs  piece.rs  square.rs
tnewt_board/src/implementations/: hash_set.rs  king_pos.rs  more_magic.rs  mut_pass.rs  original.rs  pre_filter.rs  retain.rs  threat_squares.rs
tnewt_board/src/implementations/old/: more_magic.rs  pre_filter.rs  threat_squares.rs
