[package]
name = "tnewt_rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
debug = true

[lib]
name = "tnewt_board"
path = "src/board/mod.rs"

[[bench]]
name = "move_gen"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
