[package]
name = "tnewt_rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
debug = true

[[bench]]
name = "move_gen"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tnewt_board = { path = "tnewt_board" }
