[package]
name = "tnewt_rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
debug = true

[[bench]]
name = "board_bench"
harness = false

[workspace]
members = ["tnewt_board"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tnewt_board = { path = "tnewt_board" }
rand = "0.8.4"
color-eyre = "0.6"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
